--- a/index.html
+++ b/index.html
@@ -7,43 +7,62 @@
     <style>
         /* التصميم العام */
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url('https://media.wired.com/photos/61f48f02d0e55ccbebd52d15/3:2/w_2400,h_1600,c_limit/Gear-Rant-Game-Family-Plans-1334436001.jpg');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #1a1a2e, #16213e, #0f3460);
             color: #fff;
-            padding: 20px;
             margin: 0;
+            padding: 0;
+            overflow-x: hidden;
             text-align: center;
         }
 
         h1 {
-            color: #fff;
-            font-size: 2.5rem;
-            margin-bottom: 30px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            font-size: 3rem;
             font-weight: 700;
+            margin: 40px 0;
+            color: #e94560;
+            text-shadow: 0 0 10px #e94560, 0 0 20px #e94560;
+            animation: glow 2s infinite alternate;
+        }
+
+        @keyframes glow {
+            0% {
+                text-shadow: 0 0 10px #e94560, 0 0 20px #e94560;
+            }
+            100% {
+                text-shadow: 0 0 20px #e94560, 0 0 40px #e94560;
+            }
         }
 
         .game-types {
-            background-color: rgba(255, 255, 255, 0.95); /* خلفية شبه شفافة */
-            border-radius: 15px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
             margin: 20px auto;
             padding: 30px;
             max-width: 90%;
-            color: #333;
-            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            animation: fadeIn 1.5s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .game-types h2 {
-            color: #e74c3c;
-            border-bottom: 2px solid #e74c3c;
-            padding-bottom: 15px;
-            font-size: 1.8rem;
+            color: #e94560;
+            font-size: 2rem;
             font-weight: 600;
             margin-bottom: 20px;
+            text-shadow: 0 0 10px #e94560;
         }
 
         .game-types label {
@@ -52,17 +71,45 @@
             font-size: 1.2rem;
             text-align: right;
             cursor: pointer;
-            transition: color 0.3s ease;
+            transition: all 0.3s ease;
+            padding: 10px;
+            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .game-types label:hover {
-            color: #e74c3c;
+            background: rgba(255, 255, 255, 0.1);
+            transform: translateX(-10px);
+            box-shadow: 0 0 10px rgba(233, 69, 96, 0.5);
         }
 
         .game-types input[type="checkbox"] {
             margin-left: 15px;
             transform: scale(1.2);
             cursor: pointer;
+            accent-color: #e94560;
+        }
+
+        .additional-type {
+            margin-top: 20px;
+        }
+
+        .additional-type input {
+            width: 80%;
+            padding: 10px;
+            font-size: 1rem;
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.1);
+            color: #fff;
+            transition: all 0.3s ease;
+        }
+
+        .additional-type input:focus {
+            outline: none;
+            border-color: #e94560;
+            box-shadow: 0 0 10px rgba(233, 69, 96, 0.5);
         }
 
         .vote-section {
@@ -73,41 +120,55 @@
         .vote-section button {
             padding: 15px 30px;
             font-size: 1.2rem;
-            background-color: #3498db;
+            background: linear-gradient(135deg, #e94560, #ff6b6b);
             color: #fff;
             border: none;
-            border-radius: 8px;
+            border-radius: 50px;
             cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
+            box-shadow: 0 0 15px rgba(233, 69, 96, 0.5);
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+                box-shadow: 0 0 15px rgba(233, 69, 96, 0.5);
+            }
+            50% {
+                transform: scale(1.05);
+                box-shadow: 0 0 25px rgba(233, 69, 96, 0.8);
+            }
+            100% {
+                transform: scale(1);
+                box-shadow: 0 0 15px rgba(233, 69, 96, 0.5);
+            }
         }
 
         .vote-section button:hover {
-            background-color: #2980b9;
-            transform: translateY(-2px);
-        }
-
-        .vote-section button:active {
-            transform: translateY(0);
+            background: linear-gradient(135deg, #ff6b6b, #e94560);
+            transform: translateY(-3px);
         }
 
         .stats {
             margin-top: 40px;
             font-size: 1.2rem;
             text-align: center;
-            background-color: rgba(255, 255, 255, 0.95); /* خلفية شبه شفافة */
-            border-radius: 15px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
             padding: 30px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-            color: #333;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
             backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            animation: fadeIn 1.5s ease-in-out;
         }
 
         .stats h2 {
-            color: #2c3e50;
-            font-size: 1.8rem;
+            color: #e94560;
+            font-size: 2rem;
             font-weight: 600;
             margin-bottom: 20px;
+            text-shadow: 0 0 10px #e94560;
         }
 
         .stats ul {
@@ -119,14 +180,16 @@
             margin: 15px 0;
             font-size: 1.1rem;
             padding: 10px;
-            background-color: rgba(236, 240, 241, 0.8);
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s ease;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.3s ease;
         }
 
         .stats ul li:hover {
+            background: rgba(255, 255, 255, 0.1);
             transform: translateX(10px);
+            box-shadow: 0 0 10px rgba(233, 69, 96, 0.5);
         }
 
         /* تصميم للهواتف المحمولة */
@@ -145,6 +208,11 @@
 
             .game-types label {
                 font-size: 1rem;
+            }
+
+            .additional-type input {
+                width: 90%;
+                font-size: 0.9rem;
             }
 
             .vote-section button {
@@ -198,6 +266,11 @@
         <label>
             <input type="checkbox" name="gameType" value="Sports"> ألعاب رياضية (Sports)
         </label>
+
+        <!-- حقل إدخال نوع إضافي -->
+        <div class="additional-type">
+            <input type="text" id="additionalType" placeholder="اكتب نوعًا آخر إذا لم تجده في القائمة">
+        </div>
     </div>
 
     <!-- قسم التصويت -->
@@ -223,8 +296,13 @@
                 selectedTypes.push(checkbox.value);
             });
 
+            const additionalType = document.getElementById('additionalType').value.trim();
+            if (additionalType) {
+                selectedTypes.push(additionalType);
+            }
+
             if (selectedTypes.length === 0) {
-                alert('الرجاء اختيار نوع واحد على الأقل.');
+                alert('الرجاء اختيار نوع واحد على الأقل أو كتابة نوع جديد.');
                 return;
             }
 
