--- a/index.html
+++ b/index.html
@@ -231,11 +231,10 @@
     </style>
 </head>
 <body>
-    <h1>اختر نوع اللعبة المفضل لديك</h1>
-
+    <h1>What is Your Favorite Type of Games?</h1>
     <!-- أنواع الألعاب -->
     <div class="game-types">
-        <h2>اختر نوع اللعبة:</h2>
+        <h2>Choose Game Type:</h2>
         <label>
             <input type="checkbox" name="gameType" value="Action"> أكشن (Action)
         </label>
@@ -275,13 +274,13 @@
 
     <!-- قسم التصويت -->
     <div class="vote-section">
-        <button onclick="submitVote()">تم</button>
+        <button onclick="submitVote()">OK</button>
     </div>
 
     <!-- قسم الإحصائيات -->
     <div class="stats">
-        <h2>الإحصائيات</h2>
-        <p id="totalVotes">إجمالي الأصوات: 0</p>
+        <h2>Statistics</h2>
+        <p id="totalVotes">Total votes: 0</p>
         <ul id="votesList"></ul>
     </div>
 
