--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
     </style>
 </head>
 <body>
-    <h1>What is Your Favorite Type of Games?</h1>
+    <h1>?What is Your Favorite Type of Games </h1>
     <!-- أنواع الألعاب -->
     <div class="game-types">
-        <h2>Choose Game Type:</h2>
+        <h2>:Choose Game Type</h2>
         <label>
             <input type="checkbox" name="gameType" value="Action"> أكشن (Action)
         </label>
@@ -268,7 +268,7 @@
 
         <!-- حقل إدخال نوع إضافي -->
         <div class="additional-type">
-            <input type="text" id="additionalType" placeholder="اكتب نوعًا آخر إذا لم تجده في القائمة">
+            <input type="text" id="additionalType" placeholder="Type another type if you don't find it in the list">
         </div>
     </div>
 
